# imdb_review_sentiment_analysis

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_acquisition.yml  parameters_feature_engineering.yml  parameters_model_training.yml
notebooks/: feature_engineering.ipynb  initial_exploration.ipynb  model_training.ipynb
src/imdb_review_sentiment_analysis/: __init__.py  __main__.py  settings.py
src/imdb_review_sentiment_analysis/pipelines/data_acquisition/: __init__.py  nodes.py  pipeline.py
src/imdb_review_sentiment_analysis/pipelines/data_processing/: nodes.py  pipeline.py
src/imdb_review_sentiment_analysis/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/imdb_review_sentiment_analysis/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_acquisition/: test_pipeline.py
tests/pipelines/feature_engineering/: test_pipeline.py
tests/pipelines/model_training/: test_pipeline.py
