[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "imdb_review_sentiment_analysis"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
imdb-review-sentiment-analysis = "imdb_review_sentiment_analysis.__main__:main"

[tool.kedro]
package_name = "imdb_review_sentiment_analysis"
project_name = "imdb_review_sentiment_analysis"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "imdb_review_sentiment_analysis.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "f0de9d55d122405882aad6af0d4174c9"
